(02/11/2008)

*** The last commit broke things (mlst seems picky).

(02/01/2008)

*** Missed some spots on the data channel reuse.

(12/03/2007)

*** Added data channel reuse mode for GridFTP if the server
    version is 2.3. Presumably more versions support this and
    they should eventually be added.

(10/30/2007)

*** Added totalSize implementation to data sources such that 
    the JGlobus GridFTP client sends the ALLO command before
    a transfer.

(10/03/2007)

*** Fixed some issues with the credentials used for the callback
    handler.

(08/20/2007)

*** Updated to use the new redirection stuff

(08/10/2007)

*** Removed a puzzling thing. Seems like most put/get methods in
    the file resource would ask the for the current directory only
    to not use it at all.

(05/18/2007)

*** Updated delegation bits

(03/07/2007)

*** Increased GridFTP default timeout from 12s to 30s

(02/23/2007)

*** Fixed:
      http://bugzilla.globus.org/globus/show_bug.cgi?id=4996
	  http://bugzilla.globus.org/globus/show_bug.cgi?id=5021

*** There was some useless parse(rsl) call, since the rsl was
    constructed using the RSL API in JGlobus, so it should have
	been correct in the first place.


(02/06/2007)

*** The job task handler now shuts down callback handlers from 
    JGlobus if they have no more registered jobs.

(01/28/2006)

*** Updated file resource exceptions

-------------------------------2.3----------------------------------

(11/28/2006)

*** Cleaned up the file resource implementations

(10/18/2006)

*** Added a mkdirs implementation for the file resource

(10/09/2006)

*** Use JGlobus RSL classes to construct the RSL in a structured way. 
	This does proper quoting and possibly eliminates other errors.

(10/06/2006)

*** Use textual GRAM messages instead of the error code

(04/12/2006)

*** Limited delegation is now the default

(11/23/2005)

*** Fixed a bug regarding the current dir being GridFile.UNKNOWN instead of