@@ -1,3 +1,7 @@
+(04/05/2008)
+
+*** Fixed data channel reuse behavior
+
 (02/11/2008)
 
 *** The last commit broke things (mlst seems picky).
